# website

./: Cargo.toml  build.rs  tailwind.config.js
blog/: deniz.html  joever.html  template.html
blogs/: first-blog.md  joever.md  template.md
src/: main.rs
static/: main.css  meow.html
templates/: 404.html  awesome.html  base.html  blog.html  contact.html  home.html  main.css  projects.html  truesay.html
