[package]
name = "bebsite"
version = "0.1.0"
edition = "2021"



build = "build.rs"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum", "markdown"] }
askama_axum = { version = "0.4.0", features = ["markdown"] }
axum = { version = "0.7.4", features = ["tracing"] }
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["fs"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
askama = { version = "0.12.1", features = ["markdown"] }
askama_axum = { version = "0.4.0", features = ["markdown"] }
comrak = {version = "0.22.0", features = ["syntect"] }
syntect = "*"

[profile.dev.package.askama_derive]
opt-level = 3
